# premortem

./: .env.example  .gitignore  IMPLEMENTATION.md  PHASE3.md  PRODUCT.md  README.md  docker-compose.yml  justfile  package.json  pnpm-lock.yaml
.claude/: system-prompt.md
scripts/: create-kafka-topics.sh  create-sqs-queues.sh  seed-sentry-event.sh
services/agents/: Dockerfile  pyproject.toml
services/agents/src/premortem_agents/: config.py  kafka_producer.py  main.py  sqs_consumer.py
services/agents/src/premortem_agents/rca/: agent.py  consumer.py  modal_fn.py  prompts.py
services/api/: package.json  tsconfig.json  vitest.config.ts
services/api/src/: config.ts  index.ts
services/api/src/context-builder/: build.integration.test.ts  build.ts  context-builder.integration.test.ts  index.ts  queries.ts
services/api/src/detector/: detect.integration.test.ts  detect.ts  index.ts
services/api/src/dispatcher/: dispatcher.integration.test.ts  index.ts
services/api/src/lib/: clickhouse.ts  db-types.ts  kafka.ts  postgres.ts  sqs.ts
services/api/src/routes/: health.ts  incidents.ts
services/api/src/routes/webhooks/: sentry.ts
