[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "premortem-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.6.0",
    "boto3>=1.35.0",
    "modal>=0.67.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langfuse>=2.50.0",
    "pydantic-settings>=2.5.0",
]

[project.scripts]
premortem-agents = "premortem_agents.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/premortem_agents"]
